# VEFill

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  example_domainome_preprocessed.csv
data/queries/: extract_data.sql
db/: README.md  config.py  models.py
db/orm/: models.py  session.py
db/schema/: schema.sql
db/scripts/: populate_esm1v.py
models/: best_params.json
results/: leave_non_snv_out_results.csv  lopo_results.csv  loposo_performance_gene_674.csv  loposo_performance_gene_978.csv  loposo_positions_gene_674.csv  loposo_positions_gene_978.csv  lovaro_performance_gene_674.csv  lovaro_performance_gene_978.csv  lovaro_variants_gene_674.csv  lovaro_variants_gene_978.csv  per_protein_58test_results.csv  per_protein_random_results.csv  train_results.csv
results/completeness/: mavedb_completeness_summary.csv
results/noise_simulation/: noise_ceiling_per_gene.csv  noise_vs_vefill.csv  per_protein_sigma_exclusion.csv
scripts/: run_hyperopt.py  run_inference.py  run_preprocess_data.py  run_train.py  run_train_lopo.py  run_train_per_protein_aaclasses.py  run_train_per_protein_lnsnvo.py  run_train_per_protein_loposo.py  run_train_per_protein_lovaro.py  run_train_per_protein_lposo.py  run_train_per_protein_random.py
src/: config.py  data_utils.py  evaluation.py  hyperopt.py  inference.py  model_utils.py  preprocess_data.py  train.py  train_lopo.py  train_per_protein_aaclasses.py  train_per_protein_lnsnvo.py  train_per_protein_loposo.py  train_per_protein_lovaro.py  train_per_protein_lposo.py  train_per_protein_random.py
(+19 files in other folders)
